--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL=http://localhost:8080
+VITE_API_BASE_URL=http://52.221.202.93
 
 # If your API requires Bearer token auth (e.g., JWT)
 # VITE_API_TOKEN=your_jwt_token_here
@@ -15,4 +15,4 @@ VITE_API_BASE_URL=http://localhost:8080
 # VITE_API_WITH_CREDENTIALS=true
 
 # Dev server proxy target (used in vite.config.ts). Set to your backend URL.
-VITE_PROXY_TARGET=http://localhost:8080
+VITE_PROXY_TARGET=http://52.221.202.93
